leptos_macro/tests/view/51_duplicate_prop.stderr
error: This element already has a `concrete_bool` attribute.
  --> tests/view/51_duplicate_prop.rs:10:39
   |
10 |             <Inner concrete_bool=true concrete_bool=false/>
   |                                       ^^^^^^^^^^^^^^^^^^^
